# Credit-Default-Risk-Prediction-Model

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  MLProject  README.md  conda.yaml  fastapi_app.py  flask_app.py  loantap-logistic-regression.ipynb  model_prototyping.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
Prediction_Model/: FE_pipeline.py  config.py  data_handling.py  evaluation.py  get_features.py  predict.py  train.py
Prediction_Model/trained_models/: fe_eval_model.pkl.REMOVED.git-id  fe_eval_tuned_model.pkl.REMOVED.git-id  target_pipeline_fitted.pkl
data/: LCDataDictionary.xlsx  US_zip_to_cord.csv  loan_reduced.csv  test_data.csv  train_data.csv
loantap_credit_default_risk_model/: FE_pipeline.py  config.py  custom_transformers.py  data_handling.py  data_processing.py  evaluation.py  feature_engg.py  get_features.py  pipeline.py  plotting.py  predict.py  train.py
loantap_credit_default_risk_model/trained_models/: XBG_model.pkl  XBG_model_final.pkl  fe_pipeline_fitted.pkl  fe_pipeline_fitted_final.pkl  target_pipeline_fitted.pkl
mlruns/0/: meta.yaml
mlruns/0/da273756420c450da4cd3e9211640e30/: meta.yaml
mlruns/0/da273756420c450da4cd3e9211640e30/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
mlruns/0/da273756420c450da4cd3e9211640e30/metrics/: f1-score  precision  recall  support
mlruns/0/da273756420c450da4cd3e9211640e30/params/: base_model__eval_metric  base_model__learning_rate  base_model__subsample  base_model__tree_method
mlruns/0/da273756420c450da4cd3e9211640e30/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: model_prototyping.ipynb
templates/: homepage.html
tests/: OHE_custom_tests.py  data_tests.py  test_prediction.py
